# unreasonable-ML

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: Sorting_array_with_Keras_Seq2Seq_model.ipynb
