[tool.poetry]
name = "unreasonable-ml"
version = "0.1.0"
description = "unreasonable applications of Machine Learning"
authors = ["Alex Osipenko"]
license = "Creative Commons Zero v1.0 Universal"

[tool.poetry.dependencies]
python = "~3.8"
pandas = "^1.4.2"
xgboost = "^1.6.0"
scikit-learn = "^1.0.2"
tqdm = "^4.64.0"
keras = "^2.8.0"
tensorflow = "^2.8.0"
jupyterlab = "^3.3.4"
pre-commit = "^2.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
